# llvm-project

./: .gitignore  .gitmodules  .travis.yml  Jenkinsfile  README-ve.md  README.md  patch_test.py
clang/: .gitignore  CMakeLists.txt  README.md  README.rst  README.txt  config.h.in  necaurora-ofld-cc1-wrapper.cpp  necaurora-ofld-tool-wrapper.cpp
clang/cmake/caches/: NEC-VE-Dist-stage2.cmake  NEC-VE-Dist.cmake  VectorEngine-Stage-1.cmake  VectorEngine-Stage-2.cmake  VectorEngine.cmake
clang/cmake/modules/: AddClang.cmake  FindNECAURORA_LIBELF.cmake
clang/docs/: LanguageExtensions.rst
clang/include/clang/: module.modulemap
clang/include/clang/AST/: DeclBase.h  Type.h
clang/include/clang/Basic/: BuiltinsVE.def  BuiltinsVE2.def  BuiltinsVEVL.def  BuiltinsVEVL.gen.def  BuiltinsVEVP.def  TargetBuiltins.h  TargetInfo.h
clang/include/clang/Driver/: Options.td
clang/include/clang/Sema/: Sema.h
clang/lib/AST/: ASTContext.cpp  Decl.cpp  DeclPrinter.cpp  TypePrinter.cpp
clang/lib/Basic/: CMakeLists.txt  TargetInfo.cpp  Targets.cpp
clang/lib/Basic/Targets/: Hexagon.h  VE.cpp  VE.h
clang/lib/CodeGen/: CGBuiltin.cpp  CGDebugInfo.cpp  CGExpr.cpp  CGExprScalar.cpp  CGOpenMPRuntime.cpp  CGStmtOpenMP.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenTypes.cpp  TargetInfo.cpp
clang/lib/Driver/: CMakeLists.txt  Compilation.cpp  Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  Clang.h  CommonArgs.cpp  Gnu.cpp  Linux.cpp  NECAuroraOffload.cpp  NECAuroraOffload.h  VE.cpp  VE.h  VEToolchain.cpp  VEToolchain.h
clang/lib/Driver/ToolChains/Arch/: VE.cpp  VE.h
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Headers/: CMakeLists.txt  veintrin.h  veintrin2.h  veintrin3.h  veintrin_common.h  velintrin.h  velintrin_approx.h  velintrin_gen.h
clang/lib/Sema/: SemaExpr.cpp  SemaExprCXX.cpp  SemaExprMember.cpp  SemaType.cpp
clang/src/: TargetCode.cpp  TargetCode.h  TargetCodeFragment.cpp  TargetCodeFragment.h  TypeDeclResolver.cpp  TypeDeclResolver.h  Visitors.cpp  Visitors.h  main.cpp
clang/test/: CMakeLists.txt  bare_for_loop.c  declare_target_function.c  declare_target_function_moved_body.c  lit.cfg  lit.site.cfg.in  main.h  region_with_dyn_array.c  simple_region.c  single_statement.c  stacked_omp_directives.c
clang/test/AST/: ast-print-vector-size-bool.c
clang/test/CodeGen/: debug-info-vector-bool-hvx64.c  debug-info-vector-bool.c  target-data.c  ve-abi.c  vector-alignment.c
clang/test/Driver/: ve-features.c  ve-toolchain.c  ve-toolchain.cpp
clang/test/Headers/: nvptx_device_math_complex.c
clang/test/Sema/: ext_vector_casts.c
clang/test/SemaCXX/: constexpr-vectors.cpp  vector-bool.cpp  vector-conditional.cpp  vector.cpp
clang/test/SemaOpenCL/: ext_vectors.cl
clang/test/combined_clauses/: target_teams.c
clang/test/combined_constructs/: target_parallel_params.c  target_teams_params.c
clang/test/declare_target/: declare_global_variable.c  declare_target_function_moved_body.c
clang/test/macros/: macro_complex.c  macro_complex2.c  macro_multiple_line.c
clang/test/omp_statements/: bare_for_loop_with_whitespace.c
clang/test/types/: typedef_struct.c
clang/tools/: CMakeLists.txt
clang/tools/driver-rvclang/: CMakeLists.txt  rvclang  rvclang++
clang/tools/nec-aurora-build/: CMakeLists.txt  compiler.cpp  config.h.in  linker.cpp  necaurora-ofld-cc1-wrapper.cpp  necaurora-ofld-tool-wrapper.cpp  necaurora-ofld-wrapper.cpp  necaurora-ofld-wrapper.h  necaurora-utils.cpp  necaurora-utils.h  utils.cpp
clang/tools/sotoc/: .gitignore  CMakeLists.txt  Doxyfile  README.rst
clang/tools/sotoc/docs/: main.md
clang/tools/sotoc/src/: Debug.h  DeclResolver.cpp  DeclResolver.h  OmpPragma.cpp  OmpPragma.h  TargetCode.cpp  TargetCode.h  TargetCodeFragment.cpp  TargetCodeFragment.h  TargetRegionVariable.cpp  TargetRegionVariable.h  TypeDeclResolver.cpp  TypeDeclResolver.h  Visitors.cpp  Visitors.h  main.cpp
clang/tools/sotoc/test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
clang/tools/sotoc/test/arrays/: a.out  dynamic.c  dynamic_on_device.c  global_array_static.c  implicit_first_dimension_2d_array.c  implicit_first_dimension_3d_array.c  mixed_variable_length_array_3d.c  mixed_variable_length_array_3d_2.c  slice_mixed_length_array_2d.c  slice_mixed_length_array_3d.c  slice_static_length_array_1d.c  slice_variable_length_array_1d.c  slice_variable_length_array_2d.c  slice_variable_length_array_2d_1_colon.c  slice_variable_length_array_2d_1_explicit.c  slice_variable_length_array_2d_2.c  slice_variable_length_array_3d.c  static_variable_length_array_2d.c  static_variable_length_array_2d_sw.c  static_variable_length_array_3d.c  static_variable_length_array_3d_sw.c  variable_length_array_1d.c  variable_length_array_2d.c  variable_length_array_3d.c  variable_length_array_3d_stride.c
clang/tools/sotoc/test/combined_constructs/: target_parallel.c  target_parallel_for.c  target_parallel_for_simd.c  target_parallel_for_simd_params.c  target_parallel_for_simd_stat_dim1.c  target_parallel_for_simd_stat_dim2.c  target_parallel_for_simd_stat_dim3.c  target_parallel_master.c  target_simd.c  (+10 more)
clang/tools/vars-script/: CMakeLists.txt  llvmvevars.sh
compiler-rt/cmake/Modules/CustomLibcxx/: CMakeLists.txt
openmp/: .gitignore  CMakeLists.txt  veoshim.cpp  veoshim.h
openmp/libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
openmp/libomptarget/deviceRTLs/: CMakeLists.txt
openmp/libomptarget/include/: Debug.h
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins/common/: elf_common.c
openmp/libomptarget/plugins/nec-aurora/: CMakeLists.txt
openmp/libomptarget/plugins/ve/: CMakeLists.txt
openmp/libomptarget/plugins/vh/: CMakeLists.txt  README.md
openmp/libomptarget/src/: rtl.cpp
openmp/libomptarget/tools/deviceinfo/: CMakeLists.txt
openmp/runtime/: CMakeLists.txt
openmp/runtime/cmake/: LibompGetArchitecture.cmake  LibompUtils.cmake
openmp/runtime/src/: kmp.h  kmp_affinity.h  kmp_csupport.cpp  kmp_os.h  kmp_platform.h  kmp_runtime.cpp  kmp_settings.cpp  z_Linux_asm.S  z_Linux_util.cpp
openmp/runtime/test/: lit.cfg
(+3385 files in other folders)
